--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -106,26 +106,16 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 	\section{成绩}
-	\subsection{绩点}
 	\begin{tabular*}{\linewidth}{lr@{\extracolsep{\fill}}c@{\extracolsep{\fill}}l}
 		本科绩点&3.59&/&4 \\
 		硕士均分&81.69&/&100 \\
 	\end{tabular*}
 	\sectionsep
-	\subsection{英语}
+	\section{英语水平}
 	\begin{tabular}{ll}
 		IELTS & 6.5 \\
 		CET6  & 576 \\
 	\end{tabular}
-	\sectionsep
-    
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	%     LINKS
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-	\section{链接}
-	Github\href{https://github.com/yindaheng98}{\bf @yindaheng98} \\
-	Blog:\href{http://www.yindaheng98.top}{\bf yindaheng98.top} \\
 	\sectionsep
 
 	\section{技能}
@@ -135,6 +125,15 @@
 	Docker \textbullet{} Kubernetes \\
 	Git \textbullet{} Github \textbullet{} GitLab \\
 	\LaTeX \textbullet{} Golang \textbullet{} Java \\
+	\sectionsep
+    
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	%     LINKS
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+	\section{链接}
+	Github\href{https://github.com/yindaheng98}{\bf @yindaheng98} \\
+	Blog:\href{http://www.yindaheng98.top}{\bf yindaheng98.top} \\
 	\sectionsep
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
