--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -156,7 +156,7 @@
 	\descript{2021.06至今}
 	\vspace{\topsep}
 	\begin{tightemize}
-		\item 改进常见的多尺度U-net结构实现适合多机并行加速的分体式视频超分辨率神经网络
+		\item 改进常见的多尺度特征提取结构实现适合多机并行加速的分体式视频超分辨率神经网络
 		\item 对神经网络模型的中间特征进行维度压缩和int8量化后编码为视频以便在多机间传输
 		\item 改进视频解码器实现高清帧和低清流合成高清流的功能以在无法逐帧推断时保证视频流畅
 		\item 基于模型输入帧数可变的性质自适应地控制推断过程以在动态的边缘环境中保障用户体验
