--- a/CV/ai2022.tex
+++ b/CV/ai2022.tex
@@ -130,7 +130,7 @@ Blog:\href{http://www.yindaheng98.top}{\bf yindaheng98.top} \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Research \& Development}
-\runsubsection{Acclerate live video super-resolution in edge computing}
+\runsubsection{Acclerate live video super-resolution with edge computing}
 \descript{2021.06$\sim$currently}
 \vspace{\topsep}
 \begin{tightemize}
@@ -144,13 +144,11 @@ Blog:\href{http://www.yindaheng98.top}{\bf yindaheng98.top} \\
 
 
 \section{Cooperated Research \& Development}
-\runsubsection{Develop new evaluation methods for over-hydration based on bioimpedance analysis and data mining}
-\descript{}
-\location{2018.12$\sim$currently | Jiangnan University/Department of Nephrology, Wuxi People's Hospital}
+\runsubsection{Adaptively computational routing based on environment awareness in Compute First Network (CFN)}
+\descript{2020.10$\sim$2020.12}
 \begin{tightemize}
-    \item a novel parallel-friendly DNN architecture derived from a specific but widely used DNN structure U-net
-    \item developed an distributed inference controller framework based on the \emph{\bfseries variable-size sliding window} to control the computation and transmission latency by adjusting the batch size of the DNN input
-    \item SR-integrated video decoder
+    \item Optimize the strategy of: 1) DNN layer segmentation for distributed deployment, 2) computing device selection, 3) data transmission path selection.
+    \item My contribution: Development of DNN inference control testbed (\href{https://github.com/yindaheng98/DNet}{DNet}). Scheduling and synchronizing inference process among multiple computing devices.
     \item Related paper: \textit{X. Guo et al., "Exploiting the computational path diversity with in-network computing for MEC," 2022 19th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON), 2022, pp. 1-9.}
 \end{tightemize}
 \sectionsep
