--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -160,6 +160,7 @@
 		\item 对神经网络模型的中间特征进行维度压缩和int8量化后编码为视频以便在多机间传输
 		\item 改进视频解码器实现高清帧和低清流合成高清流的功能以在无法逐帧推断时保证视频流畅
 		\item 基于模型输入帧数可变的性质自适应地控制推断过程以在动态的边缘环境中保障用户体验
+		\item 基于WebRTC实现了跨多节点的实时视频流路由转发和拓扑控制
 		\item 相关论文：D. Yin et al., "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment," 已投稿至WWW2023
 	\end{tightemize}
     \sectionsep
