--- a/CV/ai2022.tex
+++ b/CV/ai2022.tex
@@ -138,6 +138,7 @@ Blog:\href{http://www.yindaheng98.top}{\bf yindaheng98.top} \\
     \item Dimensionally compressed and int8 quantized intermediate features of the DNN and encoded features into video for transmission among multiple devices. % OK
     \item Enhance the video decoder to combine low-framerate high-definition stream and high-framerate low-definition stream into high-framerate high-definition streams for smooth video playback when frame-by-frame super-resolution inference is not supported. % OK
     \item Control the inference process adaptively based on the variable batch size of DNN input and enhanced video decoder to achieve best video quality under a specific latency bound in dynamic edge environments.
+    \item Implement low-latency video stream routing and dynamic topology control across multiple devices based on WebRTC.
     \item Related paper \textit{D. Yin et al., "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment,"} is submitted to WWW 2023
 \end{tightemize}
 \sectionsep
