--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -84,6 +84,7 @@
 	\descript{学术学位硕士}
 	\descript{计算机科学与技术}
 	\location{2020.09-2023.06}
+	\descript{均分 81.69/100}
     \sectionsep
     \subsection{\fontsize{10pt}{10pt}\selectfont{Cambridge University}}
 	\descript{暑期游学}
@@ -94,6 +95,7 @@
 	\descript{工学学士学位}
 	\descript{物联网工程}
 	\location{2016.09-2020.06}
+	\descript{绩点 3.59/4}
     \sectionsep
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -105,12 +107,12 @@
 	%     SKILLS
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-	\section{成绩}
-	\begin{tabular*}{\linewidth}{lr@{\extracolsep{\fill}}c@{\extracolsep{\fill}}l}
-		本科绩点&3.59&/&4 \\
-		硕士均分&81.69&/&100 \\
-	\end{tabular*}
-	\sectionsep
+	%\section{成绩}
+	%\begin{tabular*}{\linewidth}{lr@{\extracolsep{\fill}}c@{\extracolsep{\fill}}l}
+	%	本科绩点&3.59&/&4 \\
+	%	硕士均分&81.69&/&100 \\
+	%\end{tabular*}
+	%\sectionsep
 	\section{英语水平}
 	\begin{tabular}{ll}
 		IELTS & 6.5 \\
@@ -161,7 +163,7 @@
 		\item 改进视频解码器实现高清帧和低清流合成高清流的功能以在无法逐帧推断时保证视频流畅
 		\item 基于模型输入帧数可变的性质自适应地控制推断过程以在动态的边缘环境中保障用户体验
 		\item 基于WebRTC实现了跨多节点的实时视频流路由转发和拓扑控制
-		\item 相关论文：D. Yin et al., "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment," 已投稿至WWW2023
+		\item 相关论文：{\bfseries D. Yin et al., "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment,"} 已投稿至WWW2023
 	\end{tightemize}
     \sectionsep
 
@@ -210,7 +212,7 @@
 	\end{tightemize}
 	\sectionsep
 
-	\runsubsection{\bf 竞赛 TensorRT Hackathon 2021 三等奖}
+	\runsubsection{\bf 竞赛 TensorRT Hackathon 2021 队伍排名4/48}
 	\descript{2021.03$\sim$2021.5}
 	\location{NVIDIA | 阿里云天池}
 	\begin{tightemize}
