--- a/研究计划.md
+++ b/研究计划.md
@@ -1,14 +1,14 @@
 Dear Professor Ping Luo,
 
-I'm a 3th year MSc student majoring in Computer Science at Southeast University. I am interested in the PhD program at The Univeristy of Hong Kong, particularly the research opportunities in your group.
+I'm a 3rd year MSc student majoring in Computer Science at Southeast University. I am interested in the Ph.D. program at The University of Hong Kong, particularly the research opportunities in your group.
 
 ## Research background
 
-During postgraduate, my research topic is to acclerate super-resolution inference for live video streaming in distributed computing environment. This application scenario necessitates that the video super-resolution network be capable of performing super-resolution inference in real-time (>30FPS) with a low-latency (<500ms) on live video with the distributed computing devices, and ensuring smooth playback in the dynamic environment with varying bandwidth between distributed devices. To achieve this, I have used some optimization techniques, including:
-1. Modifaction on network structure for parallelism: Split a typical U-net based super-resolution nerwork VRT into independent modules to extract multi-scale information in parallel.
-2. Compression of intermediate features for bandwidth saving: Decrease the dimension of intermediate features, quantize features from FLOAT64 to INT8, and compress features with H.264 video encoder.
-3. Levarege information in compressed video for smooth playback: Modify VP9 decoder to merge the low-framerate high-resolution video (from super-resolution inference) and high-framerate low-resolution video to produce high-framerate high-resolution video.
-4. Dynamic 
+My master's thesis focuses on the distributed acceleration of super-resolution inference for live video streaming in an edge computing environment. In this application scenario, the video super-resolution neural network should be able of performing inference in real-time (>30FPS) with low latency (<500ms) on the support of distributed low-power computing devices, while ensuring smooth playback in the dynamic environment with varying bandwidth between computing devices. To achieve this, I have utilized various optimization strategies, including:
+1. Modification of network structure for better parallelism: Split a typical U-net-based super-resolution network VRT into independent modules to extract multi-scale information in parallel.
+2. Compression of intermediate features for bandwidth saving: Reduce the dimension of intermediate features, quantize features from FLOAT64 to INT8, and compress features with H.264 video encoder.
+3. Leverage information in compressed video for smooth playback: Modify the VP9 decoder to merge the low-framerate high-resolution video (from super-resolution inference) and high-framerate low-resolution video to produce high-framerate high-resolution video.
+4. Variable frame squence length for dynamic bandwidth adaption: Dynamically adjust the sequence length of input frames to balance video quality and latency in dynamic bandwidth.
 
 ## Further research plan
 
