--- a/申请理由.md
+++ b/申请理由.md
@@ -3,11 +3,11 @@
 ## 研究背景
 
 在硕士期间，我主要研究了实时视频流超分辨率在边缘计算环境下的推断加速。此场景要求视频超分辨率模型可以在多个计算设备的支持下达到实时运行，且在带宽不断变化的分布式计算环境中保证流畅播放。
-为了达到这一目的，我尝试了许多的模型优化技巧：
-1、模型拆分与并行化：将基于U-net结构的视频超分辨率模型VRT拆分为五个部分，其中四个部分并行地提取不同尺度的特征，第五个部分聚合不同尺度的特征输出高分辨率视频
-2、特征压缩：使用线性层压缩VRT模型的中间特征维度，而后将其量化为INT8型，最后输入到视频编码器中压缩，从而在多个计算设备间传输
-3、针对超分辨率推理帧率较低的情况，改进视频解码器，利用视频流压缩包内的信息，对低帧率高清视频帧和高帧率低清视频流进行合成，产生高帧率和高清视频流
-4、计算量动态调节：利用VRT模型输入视频帧数量可调的性质，根据网络状况动态地调节输入帧数量以平衡视频质量和延迟
+为了达到这一目的，我采用了许多的模型优化技巧：
+1. 模型拆分与并行化：将基于U-net结构的视频超分辨率模型VRT拆分为五个部分，其中四个部分并行地提取不同尺度的特征，第五个部分聚合不同尺度的特征输出高分辨率视频
+2. 特征压缩：使用线性层压缩VRT模型的中间特征维度，而后将其量化为INT8型，最后输入到视频编码器中压缩，从而在多个计算设备间传输
+3. 针对超分辨率推理帧率较低的情况，改进视频解码器，利用视频流压缩包内的信息，对低帧率高清视频帧和高帧率低清视频流进行合成，产生高帧率和高清视频流
+4. 计算量动态调节：利用VRT模型输入视频帧数量可调的性质，根据网络状况动态地调节输入帧数量以平衡视频质量和延迟
 
 ## 研究计划
 
@@ -23,11 +23,11 @@
 
 ### 解释超分辨率模型如何利用帧间相似性
 
-在探索针对VRT的动态调节机制的过程中，我们发现减小输入帧的数量对超分辨率输出的图像质量影响不大（输入帧数由7降到3，PSNR下降<1dB）。这一现象似乎表明，现有的视频超分辨率模型并未有效地利用多帧信息，而主要还是基于帧内特征进行超分辨率。如果能解释超分辨率模型利用帧间相似性的具体原理，或许能发现更进一步提升视频超分辨率质量的方案。
+在探索针对VRT的动态调节机制的过程中，我们发现减小输入帧的数量对超分辨率输出的图像质量影响不大（输入帧数由7降到3，PSNR下降<1dB）。这一现象似乎表明，现有的视频超分辨率模型并未有效地利用多帧信息，而主要还是基于帧内特征进行超分辨率。如果能解释超分辨率及类似的视频处理模型利用帧间相似性的具体原理，或许能发现更进一步提升视频超分辨率质量的方案。
 
 ### 解释超分辨率模型如何利用多尺度信息
 
-在将VRT拆分为多个尺度的分支结构后，我们发现大尺度分支上的特征数值的量级显著高于小尺度分支。这其中应该有更深层次的原因。如果能解释其中原因，或许能加深对超分辨率处理多尺度信息过程的理解。
+在将VRT拆分为多个尺度的分支结构后，我们发现大尺度分支上的特征数值的量级显著高于小尺度分支。这其中应该有更深层次的原因。如果能解释其中原因，或许能加深对神经网络处理多尺度信息过程的理解。
 
 ## 选择您的课题组继续研究的原因
 
