--- a/研究计划.md
+++ b/研究计划.md
@@ -4,13 +4,25 @@ I'm a 3rd year MSc student majoring in Computer Science at Southeast University.
 
 ## Research background
 
-My master's thesis focuses on the distributed acceleration of super-resolution inference for live video streaming in an edge computing environment. In this application scenario, the video super-resolution neural network should be able of performing inference in real-time (>30FPS) with low latency (<500ms) on the support of distributed low-power computing devices, while ensuring smooth playback in the dynamic environment with varying bandwidth between computing devices. To achieve this, I have utilized various optimization strategies, including:
-1. Modification of network structure for better parallelism: Split a typical U-net-based super-resolution network VRT into independent modules to extract multi-scale information in parallel.
+My master's thesis focuses on the distributed acceleration of super-resolution inference for live video streaming in an edge computing environment. In this application scenario, the video super-resolution model should be able of performing inference in real-time (>30FPS) with low latency (<500ms) on the support of distributed low-power computing devices, while ensuring smooth playback in the dynamic environment with varying bandwidth between computing devices. To achieve this, I have utilized various optimization strategies, including:
+1. Modification of model structure for better parallelism: Split a typical U-net-based super-resolution model VRT into independent modules to extract multi-scale information in parallel.
 2. Compression of intermediate features for bandwidth saving: Reduce the dimension of intermediate features, quantize features from FLOAT64 to INT8, and compress features with H.264 video encoder.
 3. Leverage information in compressed video for smooth playback: Modify the VP9 decoder to merge the low-framerate high-resolution video (from super-resolution inference) and high-framerate low-resolution video to produce high-framerate high-resolution video.
 4. Variable frame squence length for dynamic bandwidth adaption: Dynamically adjust the sequence length of input frames to balance video quality and latency in dynamic bandwidth.
 
 ## Further research plan
+
+In the experiment I conducted for my master's thesis, I obtained some intriguing results and came up with some interesting research topics.
+
+### Where does the stability of the super-resolution model come from?
+
+Super-resolution models are more stable in quantization or structure modification. We have applied FLOAT16 and INT8 quantization on the image super-resolution model ELAN and the multi-object tracking model FairMOT. The FLOAT16 quantized FairMOT reached 54% relative error, while ELAN exhibited minimal quality degradation (at most 2.23 dB PSNR drop) even with simple INT8 QAT quantization. Besides, even though the structure for multi-scale feature extraction in VRT has been divided into several independent parts and intermediate data is compressed from 120-dimensional FLOAT64 to 48-dimensional INT8, the accuracy of the model is still not compromised considerably (PSNR drop <2 dB).
+
+The above experiment result indicates that typical super-resolution models may have some unique properties or structures that make them more stable than other types of models for quantization and model structure modification. By understanding the reason of such stability, we can transfer those properties or structures to other types of neural networks and develop neural network models with enhanced stability and security.
+
+### How does the information in compressed video correlate with super-resolution quality?
+
+There is a strong correlation between the information in the compressed video and super-resolution quality. For example, 
 
 ## Why I believe you would be a suitable supervisor
 
